--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
+		"react-redux": "^7.2.5",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"react-transition-group": "^4.4.1",
+		"redux": "^4.1.1",
+		"redux-thunk": "^2.3.0",
 		"styled-components": "^5.2.2",
 		"swiper": "^6.5.4",
 		"uuid": "^8.3.2",
-		"web-vitals": "^1.1.1"
+		"web-vitals": "^1.1.1",
+		"web3": "^1.6.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
