--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@openzeppelin/contracts": "^4.3.2",
 		"@testing-library/jest-dom": "^5.11.10",
 		"@testing-library/react": "^11.2.5",
 		"@testing-library/user-event": "^12.8.3",
@@ -19,7 +20,8 @@
 		"swiper": "^6.5.4",
 		"uuid": "^8.3.2",
 		"web-vitals": "^1.1.1",
-		"web3": "^1.6.0"
+		"web3": "^1.6.0",
+		"web3-eth-contract": "^1.6.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -49,7 +51,7 @@
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
-		"eslint": "^7.8.1",
+		"eslint": "^7.32.0",
 		"eslint-config-airbnb": "^18.2.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-config-wesbos": "^1.0.1",
